--- a/pages/admin/components/reports.html
+++ b/pages/admin/components/reports.html
@@ -159,9 +159,9 @@
       Manage business violation reports with data visualization
      </p>
     </div>
-    <!-- <button class="btn btn-primary">
+    <button class="btn btn-primary">
      <i class="fas fa-download fa-sm mr-2"></i>Download Report
-    </button> -->
+    </button>
    </div>
   </div>
 
