refactor(inspector): 🔧 Enhance inspection submission error handling and success notification with detailed business and SMS status

--- a/pages/admin/components/dashboard.html
+++ b/pages/admin/components/dashboard.html
@@ -22,7 +22,7 @@
    rel="stylesheet"
    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.min.css"
    integrity="sha512-UJqci0ZyYcQ0AOJkcIkUCxLS2L6eNcOr7ZiypuInvEhO9uqIDi349MEFrqBzoy1QlfcjfURHl+WTMjEdWcv67A=="
-   crossorigin="anonymous"
+   crossorigin="anonymous"1
    referrerpolicy="no-referrer"
   />
   <link rel="stylesheet" href="/css/admin/dashboard.css" />
